# PythonProject14

./: .env.example  README.md  pyproject.toml
data/: operations.xlsx
htmlcov/: index.html
src/: main.py  reports.py  services.py  utils.py  views.py
tests/: test_reports.py  test_services.py  test_utils.py  test_views.py
