[project]
name = "pythonproject14"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrei Makarov",email = "aomak@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
mypy = "^1.18.2"
black = "^25.9.0"
isort = "^6.0.1"

[tool.black]
line-length = 119

[tool.isort]
line_length = 119

[mypy]
max-line-length = 119

